--- a/src/app/slider/slider.component.css
+++ b/src/app/slider/slider.component.css
@@ -1,9 +1,21 @@
 .slider-container
 {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 500px;
     height: 300px;
     position: relative;
+    display: flex;
+    /* overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth; */
+}
+
+.slide
+{
+    display: flex;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
 }
 
 .dot-container
@@ -28,4 +40,37 @@
     height: 10px;
     width: 10px;
     background-color: black;
+}
+
+.ani
+  {
+      animation: slide 500ms ease-in-out;
+      position: absolute;
+  }
+
+  .ani2
+  {
+      animation: slide2 500ms ease-in-out;
+  }
+
+  @keyframes slide {
+    from
+    {
+        left: 50%;
+    }
+    to
+    {
+        left: 0;
+    }
+}
+
+@keyframes slide2 {
+    from
+    {
+        right: 50%;
+    }
+    to
+    {
+        right: 0;
+    }
 }
